maCliAuthData-hbupd/maCliApi.h

//////////////////////////////////////////////////////////////////////////
//回调申明
typedef void *MACLIHANDLE;
// 推送内容函数原型如:OnPulish(const char *p_pszAcceptSn, const unsigned char *p_pszDataBuff, int p_iDataLen) 
// 异步应答函数原型如:OnAnswer(const char *p_pszMsgId, const unsigned char *p_pszDataBuff, int p_iDataLen) 
// 文件上传函数原型如:OnFileUp(const char *p_pszFileName, const unsigned char *p_pszError, int p_iPercent)   // p_iPercent > 0 正常传输  p_iPercent < 0 异常
// 文件下载函数原型如:OnFileDown(const char *p_pszFileName, const unsigned char *p_pszError, int p_iPercent) // p_iPercent > 0 正常传输  p_iPercent < 0 异常
typedef void (MACLI_Callback) (const char *, const unsigned char *, int);
typedef MACLI_Callback *MACLI_NOTIFY;
typedef struct
{
  char szServerName[MACLI_SERVERNAME_MAX + 1];  //服务器别名
  int nCommType;                                //通信类型：1-KCXP 2-0MQ 3-SOCKET 4-SHM
  int nProtocal;                                //通信协议：1-TCP 2-UDP 3-EPGM 4-IPC
  char szSvrAddress[MACLI_ADRRESS_MAX + 1];     //服务器地址
  int nSvrPort;                                 //服务器端口
  char szLocalAddress[MACLI_ADRRESS_MAX + 1];   //本地地址
  int nLocalPort;                               //本地端口

  int nReqId;                                   //请求标识：通信类型为4-SHM时为请求队列编号
  int nAnsId;                                   //应答标识：通信类型为4-SHM时为应答队列编号

  char szSubId[MACLI_SERVERNAME_MAX + 1];       //订阅标识: 通信类型为KCXP时为订阅队列

  char szProxy[MACLI_PROXY_MAX + 1];            //代理服务器(保留)
  char szSSL[MACLI_SSL_MAX + 1];                //SSL(保留)
  char szTermCode[MACLI_TERM_CODE + 1];         //终端特征码

  char szReqName[MACLI_SERVERNAME_MAX + 1];     //通信类型为4-SHM时填写共享内存请求队列名称
  char szAnsName[MACLI_SERVERNAME_MAX + 1];     //通信类型为4-SHM时填写共享内存应答队列名称
  char szReqConnstr[MACLI_ADRRESS_MAX + 1];     //通信类型为4-SHM时填写共享内存请求队列连接串, 例如IPC/@@IP
  char szAnsConnstr[MACLI_ADRRESS_MAX + 1];     //通信类型为4-SHM时填写共享内存应答队列连接串

  char szMonitorReqName[MACLI_SERVERNAME_MAX + 1];     //监听请求队列名称
  char szMonitorAnsName[MACLI_SERVERNAME_MAX + 1];     //监听应答队列名称
  char szMonitorReqConnstr[MACLI_ADRRESS_MAX + 1];     //监听请求队列连接串, 例如IPC/@@IP
  char szMonitorAnsConnstr[MACLI_ADRRESS_MAX + 1];     //监听应答队列连接串

  char szSocketSubConnstr[MACLI_ADRRESS_MAX + 1];      //SOCKET订阅队列连接串

  int nReqMaxDepth;                             //通信类型为4-SHM时填写共享内存请求队列最大深度
  int nAnsMaxDepth;                             //通信类型为4-SHM时填写共享内存应答队列最大深度
} ST_MACLI_CONNECT_OPTION;
typedef struct
{
  char szFuncId[MACLI_FUNC_ID_SIZE + 1];        //功能号
  MACLI_NOTIFY pfnCallback;                     //异步应答回调函数指针
} ST_MACLI_ARCALLBACK;
typedef struct
{
  char szTopic[MACLI_PUB_TOPIC_SIZE + 1];       //主题
  MACLI_NOTIFY pfnCallback;                     //发布内容回调函数指针
} ST_MACLI_PSCALLBACK;
typedef struct
{
  char szServerName[MACLI_USERINFO_MAX + 1];    //连接名称
  char szUserId    [MACLI_USERINFO_MAX + 1];    //用户名  
  char szPassword  [MACLI_USERINFO_MAX + 1];    //密码    
  char szAppId     [MACLI_USERINFO_MAX + 1];    //APP标识 
  char szAuthCode  [MACLI_USERINFO_MAX + 1];    //认证码  
} ST_MACLI_USERINFO;
typedef struct
{
  char szFuncId[MACLI_FUNC_ID_SIZE + 1];        //功能号
  char szMsgId[MACLI_MSG_ID_SIZE + 1];          //消息ID
  int nTimeout;                                 //调用超时
  char szUserData1[MACLI_USERDATA_MAX + 1];     //用户数据1
  char szUserData2[MACLI_USERDATA_MAX + 1];     //用户数据2
} ST_MACLI_SYNCCALL;
typedef struct
{
  char szFuncId[MACLI_FUNC_ID_SIZE + 1];        //功能号
  char szMsgId[MACLI_MSG_ID_SIZE + 1];          //消息ID
  int nTimeout;                                 //调用超时
  char szUserData1[MACLI_USERDATA_MAX + 1];     //用户数据1
  char szUserData2[MACLI_USERDATA_MAX + 1];     //用户数据2
} ST_MACLI_ASYNCALL;
typedef struct
{
  char szTopic[MACLI_PUB_TOPIC_SIZE + 1];       //主题
  char szAcceptSn[MACLI_MSG_ID_SIZE + 1];       //订阅受理号
  int nTimeout;                                 //调用超时
  char szUserData1[MACLI_USERDATA_MAX + 1];     //用户数据1
  char szUserData2[MACLI_USERDATA_MAX + 1];     //用户数据2
} ST_MACLI_PUBCALL;
//初始化/清理
MACLIAPI int MACLI_STDCALL maCli_Init(MACLIHANDLE *p_phHandle);
MACLIAPI int MACLI_STDCALL maCli_Exit(MACLIHANDLE p_hHandle);
//版本/参数
MACLIAPI int MACLI_STDCALL maCli_GetVersion(MACLIHANDLE p_hHandle, char *p_pszVer, int p_iVerSize);
MACLIAPI int MACLI_STDCALL maCli_GetOptions(MACLIHANDLE p_hHandle, int p_iOptionIdx, void *p_pvdValuePtr, int p_iValueSize);
MACLIAPI int MACLI_STDCALL maCli_SetOptions(MACLIHANDLE p_hHandle, int p_iOptionIdx, void *p_pvdValuePtr, int p_iValueSize);
MACLIAPI int MACLI_STDCALL maCli_SetArCallback(MACLIHANDLE p_hHandle, ST_MACLI_ARCALLBACK *p_pstArCallback);
MACLIAPI int MACLI_STDCALL maCli_SetPsCallback(MACLIHANDLE p_hHandle, ST_MACLI_PSCALLBACK *p_pstPsCallback);